--- a/solar-panel/src/main/resources/application-dev.properties
+++ b/solar-panel/src/main/resources/application-dev.properties
@@ -2,6 +2,9 @@
 server.port=8084
 spring.application.name=solar-panel
 
+#LOGGING
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
 #DATABASE
 spring.datasource.url=jdbc:postgresql://localhost:5432/solar_panel_db
 spring.datasource.username=postgres
@@ -14,3 +17,9 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:/schema.sql
 #spring.sql.init.continue-on-error=true
+
+#CONFIGURES HANDLING OF FORWARDED HEADERS FOR CORRECT CORS PROCESSING BEHIND THE GATEWAY
+server.forward-headers-strategy=framework
+
+#PER MODULE SWAGGER UI IS DISABLED, ONLY ACCESSIBLE VIA GATEWAY
+springdoc.swagger-ui.enabled=false
