--- a/solar-panel/src/main/resources/application-docker.properties
+++ b/solar-panel/src/main/resources/application-docker.properties
@@ -2,8 +2,11 @@
 server.port=8084
 spring.application.name=solar-panel
 
+#LOGGING
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
 #DATABASE
-spring.datasource.url=jdbc:postgresql://postgres:5432/solar_panel_db
+spring.datasource.url=jdbc:postgresql://hephaestus-postgres:5432/solar_panel_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -14,3 +17,9 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:/schema.sql
 #spring.sql.init.continue-on-error=true
+
+#CONFIGURES HANDLING OF FORWARDED HEADERS FOR CORRECT CORS PROCESSING BEHIND THE GATEWAY
+server.forward-headers-strategy=framework
+
+#PER MODULE SWAGGER UI IS DISABLED, ONLY ACCESSIBLE VIA GATEWAY
+springdoc.swagger-ui.enabled=false
