--- a/solar-panel/src/main/resources/application-dev.properties
+++ b/solar-panel/src/main/resources/application-dev.properties
@@ -5,21 +5,21 @@ spring.application.name=solar-panel
 #LOGGING
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
-#DATABASE
-spring.datasource.url=jdbc:postgresql://localhost:5432/solar_panel_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
+##DATABASE
+#spring.datasource.url=jdbc:postgresql://localhost:5432/solar_panel_db
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#
 #SCHEMA AND DATA INITIALIZATION
 #spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:/schema.sql
 #spring.sql.init.continue-on-error=true
-
-#CONFIGURES HANDLING OF FORWARDED HEADERS FOR CORRECT CORS PROCESSING BEHIND THE GATEWAY
-server.forward-headers-strategy=framework
-
-#PER MODULE SWAGGER UI IS DISABLED, ONLY ACCESSIBLE VIA GATEWAY
-springdoc.swagger-ui.enabled=false
+#
+##CONFIGURES HANDLING OF FORWARDED HEADERS FOR CORRECT CORS PROCESSING BEHIND THE GATEWAY
+#server.forward-headers-strategy=framework
+#
+##PER MODULE SWAGGER UI IS DISABLED, ONLY ACCESSIBLE VIA GATEWAY
+#springdoc.swagger-ui.enabled=false
