--- a/solar-panel-app/pom.xml
+++ b/solar-panel-app/pom.xml
@@ -44,6 +44,22 @@
         <!--            <groupId>io.opentelemetry</groupId>-->
         <!--            <artifactId>opentelemetry-exporter-zipkin</artifactId>-->
         <!--        </dependency>-->
+
+        <!-- ***************************************** -->
+        <!-- *** REPORTS -->
+        <!-- ***************************************** -->
+
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.21.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports-fonts</artifactId>
+            <version>6.21.0</version>
+        </dependency>
     </dependencies>
 
     <profiles>
