--- a/washing-machine-app/pom.xml
+++ b/washing-machine-app/pom.xml
@@ -137,6 +137,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<!-- Exclude all test that have the tag "slow" when running maven lifecycle test -->
+					<excludedGroups>slow</excludedGroups>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
