--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,16 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- Exclude all test that have the tag "slow" when running maven lifecycle test -->
+                    <excludedGroups>slow</excludedGroups>
+                </configuration>
+                <version>3.2.5</version>
+            </plugin>
         </plugins>
     </build>
 </project>
