--- a/product/pom.xml
+++ b/product/pom.xml
@@ -110,6 +110,14 @@
 					<plugin>
 						<groupId>com.google.cloud.tools</groupId>
 						<artifactId>jib-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>package</phase> <!-- Execute on maven lifecycle -->
+								<goals>
+									<goal>dockerBuild</goal> <!-- Create images in local docker daemon -->
+								</goals>
+							</execution>
+						</executions>
 					</plugin>
 				</plugins>
 			</build>
