--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,3 +1,58 @@
+server:
+  port: 8083
+
 spring:
   profiles:
-    active: @activatedProfile@
+    active: "@activatedProfile@"
+  application:
+    name: api-gateway
+
+  cloud:
+    gateway:
+      routes:
+        #TODO: Add proper security
+        - id: washing-machine
+          uri: http://localhost:8080
+          predicates:
+            - Path=/api/v1/washing-machines/**, /api/v1/users/**, /v3/api-docs/washing-machine
+          filters:
+            - RewritePath=/v3/api-docs/washing-machine, /v3/api-docs  # Forward to actual OpenAPI docs path
+
+        - id: product
+          uri: http://localhost:8081
+          predicates:
+            - Path=/api/v1/products/**, /v3/api-docs/product
+          filters:
+            - RewritePath=/v3/api-docs/product, /v3/api-docs  # Forward to actual OpenAPI docs path
+
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+            allowedHeaders: "*"
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+
+logging:
+  level:
+    org.springframework.cloud.gateway: DEBUG
+
+springdoc:
+  swagger-ui:
+    urls:
+      - name: washing-machine
+        url: /v3/api-docs/washing-machine
+
+      - name: product
+        url: /v3/api-docs/product
