--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.profiles.active=@activatedProfile@
+#SERVER
+server.port=8081
+spring.application.name=product
+
+#LOGGING
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+#TRACING
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+#DATABASE
+spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#CONFIGURES HANDLING OF FORWARDED HEADERS FOR CORRECT CORS PROCESSING BEHIND THE GATEWAY
+server.forward-headers-strategy=framework
+
+#PER MODULE SWAGGER UI IS DISABLED, ONLY ACCESSIBLE VIA GATEWAY
+springdoc.swagger-ui.enabled=false
