--- a/washing-machine-app/src/main/resources/application.properties
+++ b/washing-machine-app/src/main/resources/application.properties
@@ -1,1 +1,34 @@
 spring.profiles.active=@activatedProfile@
+#SERVER
+server.port=8080
+spring.application.name=washing-machine
+
+#LOGGING
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+#TRACING
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+#DATABASE
+spring.datasource.url=jdbc:postgresql://localhost:5432/washing_machine_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#MULTIPART SIZE
+spring.servlet.multipart.max-file-size=3MB
+spring.servlet.multipart.max-request-size=12MB
+
+#WORKAROUND TO HAVE THE FEIGN CLIENT COMMUNICATE BASED ON SELECTED PROFILE
+#TODO: Find an easier fix. Avoid Eureka Server for now.
+#TODO: always update this if you modify the APIs of product microservice
+product.service.url=http://localhost:8081/api/v1/products
+
+#CONFIGURES HANDLING OF FORWARDED HEADERS FOR CORRECT CORS PROCESSING BEHIND THE GATEWAY
+server.forward-headers-strategy=framework
+
+#PER MODULE SWAGGER UI IS DISABLED, ONLY ACCESSIBLE VIA GATEWAY
+springdoc.swagger-ui.enabled=false
