--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         </dependency>
 
         <dependency>
+            <!-- isNotBlank() ... -->
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
