--- a/api-gateway/src/main/resources/application-docker-github.yml
+++ b/api-gateway/src/main/resources/application-docker-github.yml
@@ -4,7 +4,7 @@ spring:
       routes:
         #TODO: Add proper security
         - id: washing-machine
-          uri: https://washing-machine-app.onrender.com
+          uri: https://washing-machine.internal.orangesmoke-f68e1158.northeurope.azurecontainerapps.io
           predicates:
             - Path=/api/v1/washing-machines/**, /api/v1/users/**, /v3/api-docs/washing-machine
           filters:
