--- a/.github/workflows/build-maven.yml
+++ b/.github/workflows/build-maven.yml
@@ -22,3 +22,6 @@ jobs:
         
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+    - name: Run Slow Integration Tests
+      run: mvn test -Dgroups=slow
